[project]
name = "crypto-file"
version = "0.1.0"
description = "Encryption and Decryption Tool"
authors = [
    {name = "Serhii Karavashkin",email = "serhii.karavashkin@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pycryptodome (>=3.23.0,<4.0.0)"
]

[tool.poetry]
package-mode = false 

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
